Admin frontend auth working

--- a/blog-api-frontend-author/package.json
+++ b/blog-api-frontend-author/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-api-frontend",
+  "name": "blog-api-frontend-author",
   "private": true,
   "version": "0.0.0",
   "type": "module",
