--- a/blog-api-backend/package.json
+++ b/blog-api-backend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "devstart": "nodemon app.js"
+    "devstart": "nodemon app.js",
+    "build": "npm install"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
