--- a/blog-api-backend/package.json
+++ b/blog-api-backend/package.json
@@ -20,6 +20,7 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.4.4",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.4.1",
     "morgan": "~1.9.1",
     "passport": "^0.7.0",
